--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,15 @@
     <meta name="description" content="Web site created using create-react-app" />
 
     <!-- -------  카카오 지도 ------------- -->
-    <script
+    <!-- <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6eca023c3d6b18b87cedb837dbaa041b"
+    ></script> -->
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6eca023c3d6b18b87cedb837dbaa041b&libraries=services,clusterer,drawing"
     ></script>
+
     <!-- --------카카오 지도 ------------- -->
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
